[tool.poetry]
name = "graphql"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.20"
strawberry-graphql = "^0.217.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
